# GSSM

./: .gitignore  clean_pycache.py  environment_test.py  pyproject.toml  readme.md  requirements.txt
ProcessedData/: readme_data_structure.md
ProcessedData/SHRP2/: readme_data_structure.md
RawData/StatisticsAccidents/BRON/: intersection_type.csv  intersection_type.xlsx  light.csv  light.xlsx  surface.csv  surface.xlsx  weather.csv  weather.xlsx  website.txt
RawData/StatisticsAccidents/IHME/: Deaths.csv  website.txt
RawData/StatisticsAccidents/NHTSA/: Database_website.txt  at_intersection.csv  at_intersection.xlsx  intersection.csv  intersection.xlsx  light.csv  light.xlsx  not_at_intersection.csv  not_at_intersection.xlsx  weather.csv  weather.xlsx
RawData/StatisticsAccidents/UNECE/: Database_website.txt  location.csv  urban_interaction.csv
src_conflict_detection/: conflict_evaluation.py
src_conflict_detection/validation_utils/: utils_detection.py  utils_features.py
src_data_preparation/: complete_environment_samples.py  downsample_profiles.py  downsample_states.py  prepare_INT.ipynb  prepare_argoverse.py  prepare_highD.py  segment_datasets.py
src_data_preparation/INT_MapVis/python/: main_visualize_data.py
src_data_preparation/INT_MapVis/python/utils/: map_vis_without_lanelet.py
src_data_preparation/INT_MapVis/recorded_trackfiles/DR_USA_Intersection_GL/: pedestrian_tracks_000.csv  vehicle_tracks_000.csv
src_data_preparation/represent_utils/: coortrans.py  get_heading_highD.py  utils_data_segmentation.py
src_encoder_pretraining/: ae_model.py  ae_train_eval.py  clt_model.py  clt_search_hyperparameter.py  clt_train_eval.py
src_encoder_pretraining/modules/: encoder.py  loss_utils.py  losses.py  measures.py  regularizers.py
src_encoder_pretraining/ssrl_utils/: utils_data.py  utils_distance_matrix.py  utils_eval.py  utils_general.py  utils_paramsearch.py
src_posterior_inference/: model.py  pi_search_bslr.py  pi_train_eval.py  train_eval_pi.py
src_posterior_inference/inference_utils/: modules.py  utils_data.py  utils_general.py  utils_train_eval_test.py
src_safety_evaluation/: analyse_events.py  attribute_intensity.py  evaluate_safety.py  organise_events.py  relate_hidden_info.py  risk_evaluation.py  vote_conflicting_target.py
src_safety_evaluation/reuse_ucd/: reuse_gaussian.py  train_gaussian.py  unified_conflit_detection.py
src_safety_evaluation/validation_utils/: EmergencyIndex.py  TwoDimSSM.py  compute_2DTTC_TAdv_ACT_EI_0214.py  utils_attribution.py  utils_detection.py  utils_eval_metrics.py  utils_evaluation.py  utils_features.py
src_safety_evaluation/validation_utils/SSMsOnPlane/: efficiency_utils.py  geometry_utils.py  longitudinal_ssms.py  readme.md  two_dimensional_ssms.py
src_trajectory_reconstruction/: event_visualiser.ipynb  organise_metadata.py  reconstruct_birdseye.py  search_ekf_parameter.py  transform_files.py
src_trajectory_reconstruction/reconstruction_utils/: utils_ego_sur.py  utils_ekf.py
src_visualisation/: figure_table_to_reproduce.ipynb
src_visualisation/visual_utils/: utils_tabfig.py
